src/config/database/snapshots/roadster__config__database__deserialize_tests__sidekiq@case_1.snap
---
source: src/config/database.rs
expression: database
---
uri = 'https://example.com:1234/'
auto-migrate = true
connect-timeout = 1000
acquire-timeout = 1000
min-connections = 0
max-connections = 1
